--- a/src/GitDotNet/GitDotNet.csproj
+++ b/src/GitDotNet/GitDotNet.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" />
+		<PackageReference Include="Nito.AsyncEx.Coordination" />
 		<PackageReference Include="spkl.Diffs" />
 		<PackageReference Include="System.Linq.Async" />
         <PackageReference Update="Microsoft.SourceLink.GitHub">
