--- a/src/tests/GitDotNet.Indexing.LiteDb.Tests/GitDotNet.Indexing.LiteDb.Tests.csproj
+++ b/src/tests/GitDotNet.Indexing.LiteDb.Tests/GitDotNet.Indexing.LiteDb.Tests.csproj
@@ -15,8 +15,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="AwesomeAssertions" />
         <PackageReference Include="FakeItEasy" />
-        <PackageReference Include="FluentAssertions" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NUnit" />
         <PackageReference Include="NUnit.Analyzers">
