--- a/src/tests/GitDotNet.Tests/GitDotNet.Tests.csproj
+++ b/src/tests/GitDotNet.Tests/GitDotNet.Tests.csproj
@@ -12,11 +12,13 @@
 
     <ItemGroup>
         <PackageReference Include="AwesomeAssertions" />
+        <PackageReference Include="BenchmarkDotNet.TestAdapter" />
         <PackageReference Include="coverlet.collector">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="FakeItEasy" />
+        <PackageReference Include="LibGit2Sharp" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NUnit" />
         <PackageReference Include="NUnit.Analyzers">
