--- a/src/GitDotNet/GitDotNet.csproj
+++ b/src/GitDotNet/GitDotNet.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
@@ -18,6 +18,7 @@
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" />
 		<PackageReference Include="Nito.AsyncEx.Coordination" />
 		<PackageReference Include="spkl.Diffs" />
+		<PackageReference Include="System.IO.Hashing" />
 		<PackageReference Include="System.Linq.Async" />
         <PackageReference Update="Microsoft.SourceLink.GitHub">
             <PrivateAssets>all</PrivateAssets>
