Remove BenchmarkDotNet.TestAdapter from unit tests to avoid duplicate test cases [skip release notes]

--- a/src/tests/GitDotNet.Tests/GitDotNet.Tests.csproj
+++ b/src/tests/GitDotNet.Tests/GitDotNet.Tests.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AwesomeAssertions" />
-        <PackageReference Include="BenchmarkDotNet.TestAdapter" />
+        <PackageReference Include="BenchmarkDotNet" />
         <PackageReference Include="coverlet.collector">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
